--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@astrojs/react": "^4.4.0",
     "@astrojs/vue": "^5.1.1",
+    "@tailwindcss/vite": "^4.1.14",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "astro": "^5.14.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tailwindcss": "^4.1.14",
     "vue": "^3.5.22"
   }
 }
